# duck-delta-table

./: README.md  pyproject.toml
notebooks/: create-synthetic-dataset-spark.ipynb
